--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
+  intl: ^0.19.0
   http: ^1.2.0
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.2
   url_launcher: ^6.2.4
-  webview_flutter: ^3.0.0
+  webview_flutter: ^4.5.0
   flutter_pdfview: ^1.0.2
   shared_preferences: ^2.0.8
+  pdf: ^3.10.7
   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_cached_pdfview: ^0.4.2
 
 dev_dependencies:
   flutter_test:
