--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   shared_preferences: ^2.0.8
   pdf: ^3.10.7
   anim_search_bar: ^2.0.3 
+  flutter_secure_storage: ^4.2.0-nullsafety.0
+  image_picker: ^1.0.7
+  page_transition: ^2.1.0
+  connectivity: ^3.0.6
  
 
   
