--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.19.0
-  http: ^1.2.0
+  http: ^0.13.6
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.2
@@ -45,7 +45,9 @@ dependencies:
   image_picker: ^1.0.7
   page_transition: ^2.1.0
   connectivity: ^3.0.6
- 
+  
+  syncfusion_flutter_pdfviewer: ^20.4.54
+
 
   
 
